FIXED: Solved the overflow bug on the navigation/header

--- a/css/style.css
+++ b/css/style.css
@@ -442,9 +442,6 @@ body.home {
   background-color: rgba(0, 0, 0, 0.46);
   z-index: 2222222; }
 
-* {
-  outline: 1px solid red; }
-
 .form-group:not(:last-child) {
   margin-bottom: 2rem; }
 
@@ -763,8 +760,7 @@ select {
 @media only screen and (max-width: 50.3em) {
   .mobile-btn_div {
     display: flex;
-    gap: 1.5rem;
-    margin-top: 1.5rem; }
+    gap: 1.5rem; }
   .btn-mobile-nav {
     display: block;
     z-index: 99999999999; }
@@ -809,6 +805,18 @@ select {
 .initial-navigation {
   display: flex; }
 
+.sticky-nav-mini {
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  width: 100% !important;
+  max-width: 100% !important;
+  height: 7rem !important;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+  background-color: transparent; }
+
 .sticky-nav {
   position: fixed !important;
   top: 0 !important;
@@ -823,12 +831,6 @@ select {
   backdrop-filter: blur(5px);
   box-shadow: 0 1.2rem 3.2rem rgba(94, 203, 252, 0.2) !important;
   border-radius: 0 !important; }
-  @media only screen and (max-width: 62.5em) {
-    .sticky-nav {
-      height: 6rem !important; } }
-  @media only screen and (max-width: 50.3em) {
-    .sticky-nav {
-      height: 5rem !important; } }
   .sticky-nav .main-nav-link {
     color: #38aff9 !important; }
   .sticky-nav .main-nav-link_icon:not(.active) {
@@ -862,12 +864,10 @@ select {
   @media only screen and (max-width: 62.5em) {
     .navigation-header {
       width: 100%;
-      height: 6rem;
-      padding: 1rem 1.5rem; } }
+      height: 6rem; } }
   @media only screen and (max-width: 50.3em) {
     .navigation-header {
-      height: 5rem;
-      padding: 1rem; } }
+      height: 7rem; } }
   .navigation-header .logo-nav {
     display: flex;
     justify-content: center;
