--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -652,6 +652,6 @@ body.home {
    z-index: 2222222;
 }
 
-* {
-   outline: 1px solid red;
-}
+// * {
+//    outline: 1px solid red;
+// }
