--- a/sass/_mobile-nav.scss
+++ b/sass/_mobile-nav.scss
@@ -49,7 +49,7 @@
 
       display: flex;
       gap: 1.5rem;
-      margin-top: 1.5rem;
+      // margin-top: 1.5rem;
 
    }
 
