--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -2,6 +2,19 @@
    display: flex;
 }
 
+.sticky-nav-mini {
+   position: fixed !important;
+   top: 0 !important;
+   left: 0 !important;
+   right: 0 !important;
+   width: 100% !important;
+   max-width: 100% !important;
+   height: 7rem !important;
+   padding-top: 0 !important;
+   padding-bottom: 0 !important;
+   background-color: transparent;
+}
+
 .sticky-nav {
    position: fixed !important;
    top: 0 !important;
@@ -18,11 +31,11 @@
    border-radius: 0 !important;
 
    @media only screen and (max-width:$bp-larger) {
-      height: 6rem !important;
+      // height: 6rem !important;
    }
 
    @media only screen and (max-width:$bp-big) {
-      height: 5rem !important;
+      // height: 5rem !important;
    }
 
    .main-nav-link {
@@ -80,14 +93,14 @@
    @media only screen and (max-width:$bp-larger) {
       width: 100%;
       height: 6rem;
-      padding: 1rem 1.5rem;
+      // padding: 1rem 1.5rem;
 
    }
 
    @media only screen and (max-width:$bp-big) {
       // width: 80%;
-      height: 5rem;
-      padding: 1rem;
+      height: 7rem;
+      // padding: 1rem;
    }
 
    .logo-nav {
